# sodium-fabric

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  build.gradle  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  CRASH_REPORT.yml  FEATURE_REQUEST.yml  bug_report.md  bug_report.yml  config.yml  crash-report.md  crash-report.yml  crash_report.md  crash_report.yml  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  new_feature.md
.github/workflows/: build-commit.yml  build-pull-request.yml  build-release.yml  build-snapshot.yml  build-tag.yml  gradle.yml  moderate-issue.yml  publish.yml  verify-issue.yml
.run/: gfhhgfd.run.xml
common/: build.gradle.kts
core/: Cargo.toml
core/.cargo/: config.toml
fabric/: build.gradle.kts
gradle/: .gitignore  fabric.gradle  java.gradle  verification-keyring.keys  verification-metadata.xml
idea/: inspections.xml
native/: Cargo.toml
native/core/: Cargo.toml  rustfmt.toml
native/core/src/: collections.rs  ffi.rs  frustum.rs  graph.rs  jni.rs  lib.rs  math.rs  mem.rs  panic.rs  region.rs
native/core/src/graph/: coords.rs  frustum.rs  local.rs  mod.rs  octree.rs  visibility.rs
native/core/src/graph/local/: index.rs  mod.rs
native/harness/: Cargo.toml
native/harness/benches/: raster.rs
native/harness/src/: main.rs
neoforge/: build.gradle.kts  gradle.properties
scripts/: update_verification_metadata.bat  update_verification_metadata.sh
src/: .gitignore
(+4245 files in other folders)
