[package]
name = "harness"
version = "0.1.0"
edition = "2021"

[dependencies]
rasterizer = { path = "../rasterizer" }
ultraviolet = "0.9.0"

[dependencies.minifb]
version = "0.23"
default-features = false
features = [ "x11" ]

[dev-dependencies.criterion]
version = "0.4"
default-features = false

[[bench]]
name = "raster"
harness = false

[features]
stats = ["rasterizer/stats"]